--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>目次</title>
+  <title>contents</title>
 </head>
 <body>
-  <h1>サンプル</h1>
+  <h1>mika's world</h1>
 
   <ul>
-    <li><a href="./sample/sample01.html">サンプル1</a></li>
-    <li><a href="./sample/sample02.html">サンプル2</a></li>
-    <li><a href="./sample/sample03.html">サンプル3</a></li>
-    <li><a href="./sample/sample04.html">サンプル4</a></li>
+    <li><a href="./sample/sample01.html">my head</a></li>
+    <li><a href="./sample/sample02.html">my eye</a></li>
+    <li><a href="./sample/sample03.html">time</a></li>
+    <li><a href="./sample/sample04.html">my favourite</a></li>
   </ul>
 
 </body>
