--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -19,9 +19,9 @@
       <header>
         <h1>site name</h1>
         <ul>
-          <li>menu1</li>
-          <li>menu2</li>
-          <li>menu3</li>
+          <li>sun</li>
+          <li>cloud</li>
+          <li>rain</li>
         </ul>
       </header>
 
@@ -37,7 +37,7 @@
       </footer>
 
       <div id="intro">
-        <p>ここはミカ</p>
+        <p>my head</p>
       </div>
 
 
