--- a/sample/sample03.html
+++ b/sample/sample03.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style03.css" />
     <!-- 自分のjs -->
     <script src="./js/script03.js"></script>
-    <title>sample03</title>
+    <title>time</title>
   </head>
   <body>
     <div class="wrapper">
